[tool.poetry]
name = "trash-route-optimization"
version = "0.1.0"
description = ""
authors = ["Mable Zhang <mablezhang2003@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.3.1"
geopandas = "^1.1.1"
folium = "^0.20.0"
networkx = "^3.5"
geopy = "^2.4.1"
matplotlib = "^3.10.3"
ortools = "^9.14.6206"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

